--- a/LabOne/entertainment.html
+++ b/LabOne/entertainment.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <main>
+        <main><!--Delete-->
             
-        </main>
+        </main><!--Delete-->
             <a href="index.html"><h1>My Favorite Things</h1></a>
         <h2>By Colin McClowry</h2>
         <nav>
