--- a/LabOne/recipe.html
+++ b/LabOne/recipe.html
@@ -21,6 +21,7 @@
     <main>
         <h2>My Favorite Recipe</h2>
         <h3>English Muffin Mini Pizza's</h3>
+        <!--File path is missing folder name-->
         <img src="Pizza.jpg" alt="Pizza" width="500"> 
         <h4>Ingredients</h4>
         <ul>
