--- a/LabFour/index.html
+++ b/LabFour/index.html
@@ -16,8 +16,8 @@
             <a href="dsc.html">Deep Sea Creatures</a>
         </nav>
     </header>
-    <main>
-        <home-content>
+    <main><!--Inside the <main> you need class="home-content" For example; <main class="home-content"> -->
+        <home-content><!--Delete-->
        <div>
         <h2>Ocean</h2>
         <p>The ocean is a huge body of saltwater that covers about 71 percent of Earth's surface. The planet has one global ocean, though oceanographers and the countries of the world have traditionally divided it into four distinct regions: the Pacific, Atlantic, Indian, and Arctic oceans. Beginning in the 20th century, some oceanographers labeled the seas around Antarctica the Southern Ocean, and in 2021 National Geographic officially recognized this fifth ocean.</p>
@@ -27,9 +27,9 @@
         <p>It is unknown how many different species call the ocean their home. With many marine ecosystems suffering from rising sea temperatures, pollution, and other problems, some oceanographers believe the number of species is dropping. Still, there may be many positive surprises awaiting oceanographers in the years ahead. It could be that more than 90 percent of the ocean's species are still undiscovered, with some scientists estimating that there are anywhere between a few hundred thousand and a few million more to be discovered. Currently, scientists know of around 226,000 ocean species.</p>
         <p>Learning more about the seafloor and the rest of the ocean is the passion of National Geographic Explorer Marcello Calisti. He is a biorobotics expert who is developing an undersea exploration vehicle that uses legged locomotion, inspired by the way an octopus moves under water. His long-range goal is to design robots that can explore the depths that are difficult for humans to reach.</p>
         <p>Since the ocean is so vast, there is plenty for future oceanographers from all corners of the globe to explore and discover.</p>
-        <img src="Images/ocean-homepage.jpeg" alt="Ocean">
+        <img src="Images/ocean-homepage.jpeg" alt="Ocean"><!--Move image after </div>-->
        </div>
-    </home-content>
+    </home-content><!--Delete-->
     </main>
     
 </body>
