--- a/LabFour/sea-jellies.html
+++ b/LabFour/sea-jellies.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <h2>Sea Jellies</h2>
+        <!--Inside of each <div> you need class="jellies"-->
         <div>
             <h3>Mertensia ovum</h3>
             <p>Also known as the Arctic comb jelly or sea nut, is a cydippid comb jelly or ctenophore first described as Beroe ovum by Johan Christian Fabricius in 1780. Unusually among ctenophores, which normally prefer warmer waters, it is found in the Arctic and adjacent polar seas, mostly in surface waters down to 50 metres (160 ft).In addition to being weakly bioluminescent in blues and greens, comb jellies produce a rainbow effect similar to that seen on an oil slick, and which is caused by interference of incident light on the eight rows of moving cilia or comb rows which propel the organism. The comb rows beat sequentially, rather like the action of a Mexican wave. The comb rows also function as chemical sense organs, serving the same role as insect antennae. Mertensia ovum is the major source of bioluminescence from Arctic gelatinous zooplankton.</p>
