--- a/LabFour/whales.html
+++ b/LabFour/whales.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <h2>Whales</h2>
+        <!--Inside of each <div> you need class="whales"-->
         <div>
             <h3>Humpback</h3>
             <p>Baleen whales (systematic name Mysticeti), also known as whalebone whales, are a parvorder of carnivorous marine mammals of the infraorder Cetacea (whales, dolphins and porpoises) which use keratinaceous baleen plates (or "whalebone") in their mouths to sieve planktonic creatures from the water. Mysticeti comprises the families Balaenidae (right and bowhead whales), Balaenopteridae (rorquals and the gray whale), and Cetotheriidae (the pygmy right whale). There are currently 16 species of baleen whales. While cetaceans were historically thought to have descended from mesonychids, molecular evidence instead supports them as a clade of even-toed ungulates (Artiodactyla). Baleen whales split from toothed whales (Odontoceti) around 34 million years ago.</p>
