(Fixed) Complete Lab Five

--- a/LabFive/index.html
+++ b/LabFive/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <img src="Images/the-onion-logo.svg" alt="The Onion">
-        <h1>The Onion</h1><!--Missing a <br> betweent The and Onion-->
+        <h1>The<br>Onion</br></h1><!--Missing a <br> betweent The and Onion-->
         <nav>
             <a href="#news">News</a>
             <a href="#sports">Sports</a>
-            <a href="entertainment">Entertainment</a> <!--Mising # infront of entertainment-->
+            <a href="#entertainment">Entertainment</a> <!--Mising # infront of entertainment-->
         </nav>
-    <!--Missing closing </header> here-->
+    </header><!--Missing closing </header> here-->
     <main>
         <section>
             <h2 id="news">News</h2>
