--- a/LabTwelve/index.html
+++ b/LabTwelve/index.html
@@ -24,12 +24,16 @@
             <input type="text" id="monster-name" name="monster-name">
             <label for="monster-email">Monster's Email</label>
             <input type="email" id="monster-email" name="monster-email" value="@monsteremail.com">
+            <!--for should be "birthday"-->
             <label for="monster-birthday">Monster's Birthday</label>
             <input type="date" id="birthday" name="monster-birthday">
                 <fieldset>
                     <legend>Scary?</legend>
                     <label>YES!</label>
                     <input type="radio" id="scary-yes" name="monster-scary" value="YES">
+                    <!--Missing label for No-->
+                    <!--Missing input for no radio-->
+
                     <label>Color of Monster</label>
                     <input type="color" id="color" name="monster-color">
                     <label>Number of Tentacles</label>
@@ -42,7 +46,7 @@
                         <input type="reset">
                         <input type="submit">
                     </div>
-                </fieldset>
+                </fieldset><!--This should be on line 36-->
          </form>
 
     </main>
