--- a/LabFifteen/index.html
+++ b/LabFifteen/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brunch</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="scripts.js"></script>
 </head>
 <header>
     <h1>Brunch</h1>
@@ -19,7 +20,7 @@
 </header>
 <body>
     <main>
-        <section class="headlines">
+        <section class="headline">
             <h2>Brunch</h2>
             <p>We've got everything you need for a strong start to your day. Keep the momentum going with satisfying waffle and baked from scratch treats, and a wide selection of beverages.</p>
                 <a class="button">
