--- a/LabEleven/index.html
+++ b/LabEleven/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="#ourstory">Story</a>
             <a href="#menu">Menu</a>
-            <a href="contactus">Contact Us</a>
+            <a href="#contactus">Contact Us</a>
         </nav>
         <img src="Images/country-2483728_1920 (1) (1).jpg" width="500px" class="center">
     </header>
