--- a/LabThirteen/index.html
+++ b/LabThirteen/index.html
@@ -14,6 +14,7 @@
                 <th colspan="9">Lord of The Rings Characters</th>
             </tr>
             <tr>
+                <!--Missing a <th> here with nothing in it.-->
                 <th>Characters</th>
                 <th>Aliases</th>
                 <th>Race</th>
