--- a/LabSixteen/index.html
+++ b/LabSixteen/index.html
@@ -48,6 +48,7 @@
             <h2 id="robots">The Robots</h2>
             <hr>
             <div class="robots">
+                <!--Missing <figure> setup around image. Check instructions-->
                 <img src="Images/mars2020-2.png">
                 <img src="Images/msl-2.png">
                 <img src="Images/marshelicopter-2.png">
@@ -100,6 +101,7 @@
             </h2>
             <hr>
             <div class="maps">
+                <!--Missing <figure> setup around image. Check instructions-->
                 <img src="Images/mera-sol2555.jpeg">
                 <img src="Images/merb-sol4836.jpeg">
             </div>
