--- a/LabFifteen/order.html
+++ b/LabFifteen/order.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="scripts.js"></script> 
 </head>
 <header>
     <h1>Brunch</h1>
