--- a/LabSixteen/index.html
+++ b/LabSixteen/index.html
@@ -48,10 +48,18 @@
             <h2 id="robots">The Robots</h2>
             <hr>
             <div class="robots">
-                <!--Missing <figure> setup around image. Check instructions-->
-                <img src="Images/mars2020-2.png">
-                <img src="Images/msl-2.png">
-                <img src="Images/marshelicopter-2.png">
+                <figure>
+                    <img src="Images/mars2020-2.png">
+                    <figcaption>Mars 2020</figcaption>
+                </figure>
+                <figure>
+                    <img src="Images/msl-2.png">
+                    <figcaption>Curiosity Rover</figcaption>
+                </figure>
+                <figure>
+                    <img src="Images/marshelicopter-2.png">
+                    <figcaption>Helicopter Tech Demo</figcaption>
+                </figure>
             </div>
             <hr>
             <h3>Rover Parts</h3>
@@ -101,9 +109,14 @@
             </h2>
             <hr>
             <div class="maps">
-                <!--Missing <figure> setup around image. Check instructions-->
-                <img src="Images/mera-sol2555.jpeg">
-                <img src="Images/merb-sol4836.jpeg">
+                <figure>
+                    <img src="Images/mera-sol2555.jpeg">
+                    <figcaption>Spirit's Journey</figcaption>
+                </figure>
+                <figure>
+                    <img src="Images/merb-sol4836.jpeg">
+                    <figcaption>Oppurtunity's Journey</figcaption>
+                </figure>
             </div>
         </section>
     </main>
