Complete Lab Eighteen

--- a/LabEighteen/index.html
+++ b/LabEighteen/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Cheese?</h1>
+        <h1 class="hdr">Cheese?</h1>
         <div class="icon">
-            <img src="Images/cheese.png" alt="Cheese Icon" width="100px">
+            <img src="Images/cheese.png"  class=" animate slide" alt="Cheese Icon" width="100px">
         </div>
         <nav>
             <a href="#experts">What do the experts say?</a>
