--- a/LabTwelve/index.html
+++ b/LabTwelve/index.html
@@ -25,15 +25,14 @@
             <label for="monster-email">Monster's Email</label>
             <input type="email" id="monster-email" name="monster-email" value="@monsteremail.com">
             <!--for should be "birthday"-->
-            <label for="monster-birthday">Monster's Birthday</label>
+            <label for="birthday">Monster's Birthday</label>
             <input type="date" id="birthday" name="monster-birthday">
                 <fieldset>
                     <legend>Scary?</legend>
                     <label>YES!</label>
                     <input type="radio" id="scary-yes" name="monster-scary" value="YES">
-                    <!--Missing label for No-->
-                    <!--Missing input for no radio-->
-
+                    <label>No</label>
+                    <input type="radio" id="scary-no" name="monster-scary" value="no">
                     <label>Color of Monster</label>
                     <input type="color" id="color" name="monster-color">
                     <label>Number of Tentacles</label>
@@ -42,11 +41,11 @@
                     <input type="number" id="eyes" name="monster-eyes" min="0" max="22">
                     <label>Monster's Creator</label>
                     <input type="text" id="creator" name="monster-creator" value="Your Name Here">
+                </fieldset>
                     <div class="actions">
                         <input type="reset">
                         <input type="submit">
                     </div>
-                </fieldset><!--This should be on line 36-->
          </form>
 
     </main>
