--- a/LabNineteen/index.html
+++ b/LabNineteen/index.html
@@ -28,10 +28,20 @@
     </header>
     <main>
         <section class="about">
-            <img src="Images/about.png" width="200px">
+            <img src="Images/about.png" width="200px" alt="about">
             <h2>About</h2>
-            <p>We make all of our food from scrathc, ranging from authenti French baked goods to an assortment of American offerings, and we're proud to provide locally sourced items, and premium organic coffees courtey of Backroafs coffee and Honest Roast coffee</p>
+            <p>We make all of our food from scrath, ranging from authenti French baked goods to an assortment of American offerings, and we're proud to provide locally sourced items, and premium organic coffees courtey of Backroafs coffee and Honest Roast coffee</p>
         </section>
+        <br>
+        <section class="hours">
+            <img src="Images/timer.svg" width="200px" alt="timer">
+            <h2>Hours</h2>
+            <p>5 am to 4 pm     Monday - Thursday</p>
+            <p>6 am to 4 pm     Friday</p>
+            <p>6 am to 6 pm     Saturday</p>
+            <p>Closed           Sunday</p>
+        </section>
+        "
 
     </main>
     
