--- a/LabNineteen/index.html
+++ b/LabNineteen/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="#about">about</a>
             <a href="#hours">hours</a>
-            <a href="#contactus">order</a>
+            <a href='order.html'>order</a>
             <img src="Images/wicker-basket.svg" width="30px">
         </nav>
         <section class="bread">
