--- a/LabSixteen/index.html
+++ b/LabSixteen/index.html
@@ -24,9 +24,9 @@
     </header>
     <main>
         <section class="headline">
-            <div class="stars"></div>
-            <div class="stars2"></div>
-            <div class="stars3"></div>
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
             <div class="rover">
                 <img src="Images/rover.svg" alt="rover">
             </div>
