--- a/LabSixteen/index.html
+++ b/LabSixteen/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <nav>
+            <!--Add href="" on each a with corresponding id. For example href="#overview"-->
             <a>Overview</a>
             <a>Robots</a>
             <a>Timeline</a>
