--- a/LabFifteen/index.html
+++ b/LabFifteen/index.html
@@ -9,23 +9,24 @@
 </head>
 <header>
     <h1>Brunch</h1>
-    <a>
+    <a><!--Add href=index.html to the <a>-->
         <img src="Images/logo.svg">
+
         <nav>
             <a href="menu.html">Menu</a>
             <a href="about.html">About</a>
             <a href="order.html">Order</a>
         </nav>
-    </a>
+    </a><!--Move to line 13.-->
 </header>
-<body>
+<body><!--Move to after line 8-->
     <main>
         <section class="headline">
             <h2>Brunch</h2>
             <p>We've got everything you need for a strong start to your day. Keep the momentum going with satisfying waffle and baked from scratch treats, and a wide selection of beverages.</p>
-                <a class="button">
+                <a class="button"><!--Move class="button" to after href="menu.html". Then delete this line-->
                     <a href="menu.html">See Menu</a>
-                </a>
+                </a><!--Delete this line-->
         </section>
         <section class="purple">
             <p>
