--- a/LabFifteen/menu.html
+++ b/LabFifteen/menu.html
@@ -8,16 +8,17 @@
 </head>
 <header>
     <h1>Brunch</h1>
-    <a>
+    <a><!--Add href=index.html to the <a>-->
         <img src="Images/logo.svg">
+
         <nav>
             <a href="menu.html">Menu</a>
             <a href="about.html">About</a>
             <a href="order.html">Order</a>
         </nav>
-    </a>
+    </a><!--Move to line 13.-->
 </header>
-<body>
+<body><!--Move to after line 8-->
     <main>
         <section class="menu">
             <h2>Menu</h2>
