--- a/LabSeventeen/index.html
+++ b/LabSeventeen/index.html
@@ -11,7 +11,7 @@
     <div class="parallax">
         <img src="Images/grindelwald.jpeg">
     </div>
-    <div class="overlay" class="toggle-nav"> </div>
+    <div class="overlay toggle-nav"> </div>
     
     <header>
         <div class="hamburger" onclick="toggleNav()">
@@ -27,20 +27,15 @@
         </nav>
         <h1>Eiger</h1>
         <div class="social">
-            <a href="https://www.facebook.com/">
-                <img src="Images/2021_Facebook_icon.svg.png" alt="Facebook">
-            </a>
-            <a href="https://www.instagram.com/">
-                <img src="Images/Instagram_icon.png" alt="Instagram">
-            </a>
-            <a href="https://www.pinterest.com/">
-                <img src="Images/pinterest.png" alt="Pinterest">
-            </a>
+            <a href="https://www.facebook.com/"><img src="Images/2021_Facebook_icon.svg.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="Images/Instagram_icon.png" alt="Instagram"></a>
+            <a href="https://www.pinterest.com/"><img src="Images/pinterest.png" alt="Pinterest"></a>
         </div>
     </header>
     <main>
         <section class="call-to-action">
             <h2>The Eiger</h2>
+            <!--href="#contact"-->
             <a href #contact class="button">Explore the Mountains</a>
         </section>
         <section class="mountains" id="about">
@@ -67,29 +62,35 @@
                 <h5>AD (G4) with III-, 1650m. 6 hours in ascent, 3 to 4hours in descent</h5>
                 <p>The West Flank & West Ridge is the easiest route to the summit and the usual descent route for most parties. Route finding on the lower part of the flank can be very difficult, especially in descent if one has not gone up this way initially. Though not that technically difficult it is a big high alpine tour that can be especially serious in poor weather or conditions. Recommended equipment is an ice axe, crampons, 2 ice screws, 2 pitons (or nuts / cams) and 4 to 5 carabiners. There are fixed iron rods on the upper part of the route. Charles Barrington with Christian Almer and Peter Bohren, , made the first ascent of the West Flank & West Ridge on 11 August 1858 (also the first ascent of the peak).
                 </p>
-                <a class="button" content="Climb It" href></a>
+                <a class="button" href>Climb It</a>
             </div>
             <div>
                 <img src="Images/eiger.jpeg">
                 <h4>North Face</h4>
                 <h5>1938 Route: ED2 (G14) V-, A0, 60Â°, 1800m, one to three or more days.</h5>
                 <p>Since the first ascent of the face in 1938 there have been numerous new routes and variations on the face including many that end on the West Ridge or NE Face and even several Sport Climbing routes low on the face (Eiger NF routes). Still, most climbers seem to be most familiar with and aspire to the original classic 1938 route. But, note that in recent years much of the snow and the ice has melted back so that late in the season the face is often almost bare.</p>
+                <a class="button" href>Climb It</a>
             </div>
             <div>
                 <img src="Images/jungfraujoch.jpeg">
                 <h4>Mittellegi Ridge</h4>
                 <h5>D (G5) with IV & fixed ropes, 4 to 8 hours from Mittellegi Hut</h5>
                 <p>The Mittellegi Ridge is probably the most popular route on the Eiger. It is a fantastic steep knife edged ridge offering excellent climbing with little or no objective danger. Yuko Maki with Fritz Amatter, Samuel Brawand and Fritz Steuri made the first ascent of the Mittellegi Ridge on 10 September 1921.</p>
+                <a class="button" href>Climb It</a>
             </div>
         </section>
-        <section class="contact" id="Name" form>
+        <section class="contact" id="Name"><!--id="contact"-->
+            <!--Add form tag here-->
             <h3>Contact</h3>
+            <!--Should be for="name" on the label-->
             <label id="name">Name</label>
             <input type="text" id="name">
+            <!--Should be for="email" on the label-->
             <label id="email">Email</label>
             <input type="email" id="email">
             <textarea id="submit">Type message here...</textarea>
             <input type="submit" id="submit">
+            <!--Add closing </form> here-->
         </section>
 
     </main>
