--- a/LabEighteen/index.html
+++ b/LabEighteen/index.html
@@ -23,10 +23,10 @@
     <main>
         <h2 id="experts">What do the experts say?</h2>
         <section class="Experts">
-            <a id="experts">
+            <a id="experts"><!--Change a to div. <a> is only for creating links.-->
                 <p>"Yes, cheese was and is and will always be. Cheese will be because it always has and will continue to be. Since cheese was, it is." - Dr. Reginald Evergreen</p>
                 <img src="Images/doctor.jpeg" width="500px">
-            </a>
+            </a><!--Change a to div. <a> is only for creating links.-->
         </section>
         <hr>
         <section>
