Complete Lab Fifteen

--- a/LabFifteen/index.html
+++ b/LabFifteen/index.html
@@ -7,26 +7,22 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="scripts.js"></script>
 </head>
+<body>
 <header>
     <h1>Brunch</h1>
-    <a><!--Add href=index.html to the <a>-->
-        <img src="Images/logo.svg">
-
+    <a href="index.html">
+        <img src="Images/logo.svg"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="about.html">About</a>
             <a href="order.html">Order</a>
         </nav>
-    </a><!--Move to line 13.-->
 </header>
-<body><!--Move to after line 8-->
     <main>
         <section class="headline">
             <h2>Brunch</h2>
             <p>We've got everything you need for a strong start to your day. Keep the momentum going with satisfying waffle and baked from scratch treats, and a wide selection of beverages.</p>
-                <a class="button"><!--Move class="button" to after href="menu.html". Then delete this line-->
-                    <a href="menu.html">See Menu</a>
-                </a><!--Delete this line-->
+            <a href="menu.html" class="button">See Menu</a>
         </section>
         <section class="purple">
             <p>
