--- a/LabFifteen/menu.html
+++ b/LabFifteen/menu.html
@@ -6,19 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+<body>
 <header>
     <h1>Brunch</h1>
-    <a><!--Add href=index.html to the <a>-->
-        <img src="Images/logo.svg">
-
+    <a href="index.html">
+        <img src="Images/logo.svg"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="about.html">About</a>
             <a href="order.html">Order</a>
         </nav>
-    </a><!--Move to line 13.-->
 </header>
-<body><!--Move to after line 8-->
     <main>
         <section class="menu">
             <h2>Menu</h2>
